# NexusNet

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  SUPPORT.md  api.md  docker-compose.yml  mkdocs.yml  nexusnet_complete_tutorial.ipynb  nexusnet_config.yaml  pyproject.toml  pytest.ini  quickstart.md  requirements-pg.txt  requirements-train.txt  requirements-windows.txt  requirements.txt  setup.py  wasm_build.py
.github/: pull_request_template.md
app/: main.py
config/: planes.yaml
connectors/: fs.py  gdrive.py  git_repo.py  notion_conn.py  slack_conn.py  web.py
core/: config.py  orchestrator.py
docker/: Dockerfile  compose.dev.yml  compose.full.yml  compose.pg.yml  docker-compose.yml
docs/: ARCHITECTURE.md  FEDERATED (2).md  NEXUSNET_ASSIMILATION_MIGRATION_NOTES.md  NEXUSNET_CANON_MATRIX.md  NEXUS_PHASE1_ARCHITECTURE.md  OPERATIONS.md  QES.md  RAG.md  RND-R0.md  SAFETY.md  UPGRADES.md  admin_ops.md  aitune_assimilation.md  aitune_linux_nvidia_validation.md  aitune_supported_lane.md  aitune_validation_matrix.md  assimilation_eval_artifacts.md  core_brain_execution.md  core_evidence_driven_execution.md  core_promotion_replacement_linkage.md  edge_vision_operationalization.md  engines.md  engines_setup.md  expert_router_alignment.md  federated.md  gateway_skills_approvals.md  goose_acp_assimilation.md  goose_acp_health.md  goose_adversary_review_hardening.md  goose_closeout_report.md  (+42 more)
nexus/: config.py  (+7 more)
(+792 files in other folders)
